# soundToTextToChatGptReplySound

./: README.md  call_llm_api.py  camera.py  config.json.zi  default.html  faceCamera.py  faceMarkCamera.py  gesture.py  git.log.html  libSizeCalc.py  main.py  pyproject.toml  say.py  test_cv2.py  textAndReplay.log.html  textAndReplay.py  translatation.py  winApp.py
